Fri Nov 28 14:31:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed error in my previous change.

Fri Nov 28 14:03:53 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Moved ACE_OS::mutex_init() above ACE_OS::event_init() to fix
          internal compiler error with Cygwin.

Fri Nov 28 13:43:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check for Id string in the .bor files.

Thu Nov 27 10:40:32 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Configuration_Import_Export.cpp (import_config): The
	  problem: when importing a configuration from file - the import
 	  process assumes maximum line length of 4096 bytes (which means
 	  actually about 1360 bytes because each byte is represented as
 	  three bytes in the output file).  The solution is to use a
 	  dynamic buffer to load a line from the file. If the load did not
 	  reach the end of the line - resize the buffer and continue until
 	  the end of the line is reached.  Thanks to Moran Levi
 	  <moran@monosphere.com> for the fixes.

Thu Nov 27 16:51:31 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/ARGV_Test.cpp:

	  Fixed compile errors on Win32.

Thu Nov 27 10:51:00 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * include/makeinclude/rules.bin.GNU:
        * include/makeinclude/rules.lib.GNU:
          Added new variable, LIB_INSTALL that contains the libraries that
          should be installed and added it as a dependency of BIN so that
          the libs will get installed prior to building the BIN that depends
          on it.

Wed Nov 26 18:36:04 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/ARGV_Test.cpp:

	  Fixed compile errors, mostly related to missing includes.

Wed Nov 26 17:09:32 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/Log_Msg.cpp (log): Fixed a compile error with VC6.
