@@ -1,3 +1,9 @@
+Fri Nov 28 08:56:50 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>
+
+	* ace/Configuration_Import_Export.cpp (import_config): Rearranged
+	  the code a bit to avoid declaring the "end" variable multiple
+ 	  times in the loop.  Thanks to Moran Levi for suggesting this.
+
 Fri Nov 28 14:31:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/fuzz.pl:
